--- a/pages/8921.html
+++ b/pages/8921.html
@@ -1085,30 +1085,28 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#original_articles'>Original articles</a></li><li><a href='#review'>Review</a></li><li><a href='#experimental_constraints'>Experimental constraints</a></li><li><a href='#mond_phenomenology_from_actual_dark_matter'>MOND phenomenology from actual dark matter</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>The <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a> including <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>dark energy</a> and <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a> is in very good agreement with observation on scales above those of galaxies, but in its standard version becomes problematic below this scale (there are variants that address this, such as <a class='existingWikiWord' href='/nlab/show/fuzzy+dark+matter'>fuzzy dark matter</a>).</p>
 
-<p>Curiously though, the particular behaviour of experimental data on these “small” cosmological scales turns out to have a surprisingly simple and universal phenomenological fit by a simple modification of the <a class='existingWikiWord' href='/nlab/show/force'>force</a> law of <a class='existingWikiWord' href='/nlab/show/classical+mechanics'>Newtonian mechanics</a> (“Newton’s third law”, corrections from <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a> are typically very small for the effects in question).</p>
+<p>Curiously though, the particular behaviour of experimental data on these “small” cosmological scales turns out to have a remarkably simple and universal phenomenological fit by a simple modification of the <a class='existingWikiWord' href='/nlab/show/force'>force</a> law of <a class='existingWikiWord' href='/nlab/show/classical+mechanics'>Newtonian mechanics</a> (“Newton’s third law”, corrections from <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a> are typically very small for the effects in question).</p>
 
 <p><em>MOND</em> is the abbreviation for this <em>modified Newtonian dynamics</em> (<a href='#Milgrom83a'>Milgrom 83 a</a>, <a href='#Milgrom83b'>Milgrom 83 b</a>, <a href='#Milgrom83c'>Milgrom 83 c</a>). This refers to the proposal of modifying Newton’s third law</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_52318fbb480b945833e0981fd236c58971958954_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>=</mo><mi>m</mi><mi>a</mi></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ae5be7dc6ba3088c8c7924f3c54b0db6b4f354cc_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>=</mo><mi>m</mi><mi>a</mi></mrow><annotation encoding='application/x-tex'>
   F = m a
 
 </annotation></semantics></math></div>
-<p>relating the <a class='existingWikiWord' href='/nlab/show/force'>force</a> experienced by a body of <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> <math class='maruku-mathml' display='inline' id='mathml_52318fbb480b945833e0981fd236c58971958954_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi></mrow><annotation encoding='application/x-tex'>m</annotation></semantics></math> to its <a class='existingWikiWord' href='/nlab/show/acceleration'>acceleration</a> <math class='maruku-mathml' display='inline' id='mathml_52318fbb480b945833e0981fd236c58971958954_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi></mrow><annotation encoding='application/x-tex'>a</annotation></semantics></math> by an expression of the form</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_52318fbb480b945833e0981fd236c58971958954_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>=</mo><mi>m</mi><mspace width='thinmathspace'></mspace><mi>μ</mi><mo stretchy='false'>(</mo><mi>a</mi><mo stretchy='false'>/</mo><msub><mi>a</mi> <mn>0</mn></msub><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mi>a</mi></mrow><annotation encoding='application/x-tex'>
+<p>relating the <a class='existingWikiWord' href='/nlab/show/force'>force</a> experienced by a body of <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> <math class='maruku-mathml' display='inline' id='mathml_ae5be7dc6ba3088c8c7924f3c54b0db6b4f354cc_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi></mrow><annotation encoding='application/x-tex'>m</annotation></semantics></math> to its <a class='existingWikiWord' href='/nlab/show/acceleration'>acceleration</a> <math class='maruku-mathml' display='inline' id='mathml_ae5be7dc6ba3088c8c7924f3c54b0db6b4f354cc_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi></mrow><annotation encoding='application/x-tex'>a</annotation></semantics></math> by an expression of the form</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ae5be7dc6ba3088c8c7924f3c54b0db6b4f354cc_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>=</mo><mi>m</mi><mspace width='thinmathspace'></mspace><mi>μ</mi><mo stretchy='false'>(</mo><mi>a</mi><mo stretchy='false'>/</mo><msub><mi>a</mi> <mn>0</mn></msub><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mi>a</mi></mrow><annotation encoding='application/x-tex'>
   F = m \,\mu(a/a_0)\, a
 
 </annotation></semantics></math></div>
-<p>for some acceleration scale <math class='maruku-mathml' display='inline' id='mathml_52318fbb480b945833e0981fd236c58971958954_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>a</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>a_0</annotation></semantics></math> and some interpolating function <math class='maruku-mathml' display='inline' id='mathml_52318fbb480b945833e0981fd236c58971958954_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>μ</mi><mo lspace='verythinmathspace'>:</mo><mi>ℝ</mi><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mu \colon \mathbb{R} \to \mathbb{R}</annotation></semantics></math>.</p>
+<p>for some acceleration scale <math class='maruku-mathml' display='inline' id='mathml_ae5be7dc6ba3088c8c7924f3c54b0db6b4f354cc_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>a</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>a_0</annotation></semantics></math> and some interpolating function <math class='maruku-mathml' display='inline' id='mathml_ae5be7dc6ba3088c8c7924f3c54b0db6b4f354cc_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>μ</mi><mo lspace='verythinmathspace'>:</mo><mi>ℝ</mi><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mu \colon \mathbb{R} \to \mathbb{R}</annotation></semantics></math>.</p>
 
-<p>The motivation is that choosing the constant <math class='maruku-mathml' display='inline' id='mathml_52318fbb480b945833e0981fd236c58971958954_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>a</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>a_0</annotation></semantics></math> and the function <math class='maruku-mathml' display='inline' id='mathml_52318fbb480b945833e0981fd236c58971958954_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>μ</mi></mrow><annotation encoding='application/x-tex'>\mu</annotation></semantics></math> suitably, then such a modified formula surprisingly well fits the rotation-velocities of observed <a class='existingWikiWord' href='/nlab/show/galaxy'>galaxies</a> in dependence of the radius, something which the <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a> with <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a> still has some problems with fitting properly (but see <a href='#KaplinghatTurner02'>Kaplinghat-Turner 02</a>, <a href='#BLSF09'>BLSF 09</a>, <a href='#Chan13'>Chan 13</a>).</p>
+<p>The motivation is that choosing the constant <math class='maruku-mathml' display='inline' id='mathml_ae5be7dc6ba3088c8c7924f3c54b0db6b4f354cc_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>a</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>a_0</annotation></semantics></math> and the function <math class='maruku-mathml' display='inline' id='mathml_ae5be7dc6ba3088c8c7924f3c54b0db6b4f354cc_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>μ</mi></mrow><annotation encoding='application/x-tex'>\mu</annotation></semantics></math> suitably, then such a modified formula fits the rotation-velocities of observed <a class='existingWikiWord' href='/nlab/show/galaxy'>galaxies</a> in dependence of the <a class='existingWikiWord' href='/nlab/show/radius'>radius</a> remarkably well, something which the <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a> with <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a> still has some problems with (but see <a href='#KaplinghatTurner02'>Kaplinghat-Turner 02</a>, <a href='#BLSF09'>BLSF 09</a>, <a href='#Chan13'>Chan 13</a>).</p>
 
-<p>Of course an ad-hoc such modification of the basic laws of physics breaks many established properties of physics, such as the <a class='existingWikiWord' href='/nlab/show/principle+of+equivalence'>principle of equivalence</a> in <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a> and various <a class='existingWikiWord' href='/nlab/show/conservation+law'>conservation laws</a>. It must be that this modified Newtonian force law is the effect of some more fundamental theory. The only proposal for such a theory apart from gravity+dark matter itself (<a href='#KaplinghatTurner02'>Kaplinghat-Turner 02</a>, <a href='#BLSF09'>BLSF 09</a>, <a href='#Chan13'>Chan 13</a>) is to add to Einstein gravity a unit vector field and a scalar field (<a href='#Bekenstein04'>Bekenstein 04</a>, “TeVeS”), themselves thus otherwise unobserved “dark fields”, as it were, but, as opposed to say the <a class='existingWikiWord' href='/nlab/show/axion'>axion</a> dark matter candidate, not motivated beyond the desire to fit galaxy rotation curves.</p>
-
-<p>Even if one accepts this, the resulting theory fails to describe global cosmological structures (<a href='#Dodelson11'>Dodelson 11</a>).</p>
+<p>Of course an ad-hoc such modification of the basic laws of physics breaks many established properties of physics, such as the <a class='existingWikiWord' href='/nlab/show/principle+of+equivalence'>principle of equivalence</a> in <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a> and various <a class='existingWikiWord' href='/nlab/show/conservation+law'>conservation laws</a>. It must be that this modified Newtonian force law is the effect of some more fundamental theory. The only proposal for such a theory apart from <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a>+<a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a> itself (<a href='#KaplinghatTurner02'>Kaplinghat-Turner 02</a>, <a href='#BLSF09'>BLSF 09</a>, <a href='#Chan13'>Chan 13</a>) is to add to Einstein gravity a unit vector field and a <a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a> (<a href='#Bekenstein04'>Bekenstein 04</a>, “TeVeS”), themselves thus otherwise unobserved “dark fields”, as it were, but, as opposed to say the <a class='existingWikiWord' href='/nlab/show/axion'>axion</a> dark matter candidate, not motivated beyond the desire to fit galaxy rotation curves.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -1118,27 +1116,33 @@ margin-left: 0em;
 
 <h2 id='references'>References</h2>
 
-<p>Due to</p>
+<h3 id='original_articles'>Original articles</h3>
+
+<p>The concept of MOND is due to</p>
 
 <ul>
 <li id='Milgrom83a'>
-<p>M. Milgrom, (1983). “A modification of the Newtonian dynamics as a possible alternative to the hidden mass hypothesis”. Astrophysical Journal. 270: 365–370. Bibcode:1983ApJ…270..365M. doi:10.1086/161130.</p>
+<p><a class='existingWikiWord' href='/nlab/show/Mordehai+Milgrom'>Mordehai Milgrom</a>, <em>A modification of the Newtonian dynamics as a possible alternative to the hidden mass hypothesis</em>, Astrophysical Journal. 270: 365–370. (1983) doi:10.1086/161130.</p>
 </li>
 
 <li id='Milgrom83b'>
-<p>M. Milgrom, (1983). “A modification of the Newtonian dynamics - Implications for galaxies”. Astrophysical Journal. 270: 371–389. Bibcode:1983ApJ…270..371M. doi:10.1086/161131.</p>
+<p><a class='existingWikiWord' href='/nlab/show/Mordehai+Milgrom'>Mordehai Milgrom</a>, <em>A modification of the Newtonian dynamics - Implications for galaxies</em>, Astrophysical Journal. 270: 371–389. (1983) doi:10.1086/161131.</p>
 </li>
 
 <li id='Milgrom83c'>
-<p>M. Milgrom, (1983). “A modification of the Newtonian dynamics - Implications for galaxy systems”. Astrophysical Journal. 270: 384. Bibcode:1983ApJ…270..384M. doi:10.1086/161132..</p>
-</li>
-
-<li id='Bekenstein04'>
-<p><a class='existingWikiWord' href='/nlab/show/Jacob+Bekenstein'>Jacob Bekenstein</a>, <em>Relativistic gravitation theory for the modified Newtonian dynamics paradigm</em>, Physical Review D, 70 (8): 083509, (<a href='https://arxiv.org/abs/astro-ph/0403694'>arXiv:astro-ph/0403694</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Mordehai+Milgrom'>Mordehai Milgrom</a>, <em>A modification of the Newtonian dynamics - Implications for galaxy systems</em>, Astrophysical Journal. 270: 384. (1983) doi:10.1086/161132</p>
 </li>
 </ul>
 
-<p>General review:</p>
+<p>and its most popular relativistic completion TeVeS is due to</p>
+
+<ul>
+<li id='Bekenstein04'><a class='existingWikiWord' href='/nlab/show/Jacob+Bekenstein'>Jacob Bekenstein</a>, <em>Relativistic gravitation theory for the modified Newtonian dynamics paradigm</em>, Physical Review D, 70 (8): 083509, (<a href='https://arxiv.org/abs/astro-ph/0403694'>arXiv:astro-ph/0403694</a>)</li>
+</ul>
+
+<h3 id='review'>Review</h3>
+
+<p>General review includes</p>
 
 <ul>
 <li>
@@ -1158,10 +1162,18 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h3 id='experimental_constraints'>Experimental constraints</h3>
+
 <p>The stark failure of plain MOND to fit data on large cosmological scales is highlighted in</p>
 
 <ul>
 <li id='Dodelson11'>Scott Dodelson, <em>The Real Problem with MOND</em>, Int. J. Mod. Phys. D, 20, 2749 (2011). (<a href='https://arxiv.org/abs/1112.1320'>arXiv:1112.1320</a>)</li>
+</ul>
+
+<p>The instability of its relativistic completion by TeVeS was pointed out in</p>
+
+<ul>
+<li>Michael D. Seifert, <em>Stability of spherically symmetric solutions in modified theories of gravity</em>, Phys.Rev.D76:064002, 2007 (<a href='https://arxiv.org/abs/gr-qc/0703060'>arXiv:gr-qc/0703060</a>)</li>
 </ul>
 
 <p id='ConstraintsFromMergingNeutronStars'> The detection of <a class='existingWikiWord' href='/nlab/show/gravitational+wave'>gravitational waves</a> coincident with <a class='existingWikiWord' href='/nlab/show/electromagnetic+radiation'>electromagnetic radiation</a> from merging <a class='existingWikiWord' href='/nlab/show/neutron+star'>neutron stars</a> (event GW170817, <a href='LIGO-Virgo#LIGOVirgo17'>LIGO-Virgo 17</a>) constrains relatvistic completions of MOND:</p>
@@ -1175,6 +1187,8 @@ margin-left: 0em;
 <p>Sibel Boran, Shantanu Desai, Emre Kahya, Richard Woodard, <em>GW170817 Falsifies Dark Matter Emulators</em> (<a href='https://arxiv.org/abs/1710.06168'>arXiv:1710.06168</a>)</p>
 </li>
 </ul>
+
+<h3 id='mond_phenomenology_from_actual_dark_matter'>MOND phenomenology from actual dark matter</h3>
 
 <p>Derivations of the MOND phenomenology from actual <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a> is discussed in the following articles:</p>
 
@@ -1212,14 +1226,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 24, 2017 02:46:44 
+  Revised on October 24, 2017 03:52:44 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/MOND" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/MOND/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/MOND" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/MOND" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/MOND" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/MOND/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/MOND" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/MOND" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
