--- a/pages/11532.html
+++ b/pages/11532.html
@@ -312,14 +312,14 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p><em>Real algebraic K-theory</em> is the the <math class='maruku-mathml' display='inline' id='mathml_6ee1da2c956df9974ed33aa94fcc1389b3c5ca3a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/equivariant+cohomology'>equivariant cohomology</a> refinement of <a class='existingWikiWord' href='/nlab/show/algebraic+K-theory'>algebraic K-theory</a> in analogy to how <a class='existingWikiWord' href='/nlab/show/KR+cohomology+theory'>KR-theory</a> (“real topological K-theory”) is the <math class='maruku-mathml' display='inline' id='mathml_6ee1da2c956df9974ed33aa94fcc1389b3c5ca3a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2</annotation></semantics></math>-equivariant refinement of <a class='existingWikiWord' href='/nlab/show/topological+K-theory'>topological K-theory</a>.</p>
+<p><em>Real algebraic K-theory</em> is the the <math class='maruku-mathml' display='inline' id='mathml_2b83279e792660f6aed0a3a03b86ebd6831c362d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/equivariant+cohomology'>equivariant cohomology</a> refinement of <a class='existingWikiWord' href='/nlab/show/algebraic+K-theory'>algebraic K-theory</a> in analogy to how <a class='existingWikiWord' href='/nlab/show/KR+cohomology+theory'>KR-theory</a> (“real topological K-theory”) is the <math class='maruku-mathml' display='inline' id='mathml_2b83279e792660f6aed0a3a03b86ebd6831c362d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2</annotation></semantics></math>-equivariant refinement of <a class='existingWikiWord' href='/nlab/show/topological+K-theory'>topological K-theory</a>.</p>
 
 <h2 id='references'>References</h2>
 
-<p>The main text remains unpublished as of this writing</p>
+<p>The main text is an unpublished book draft</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Lars+Hesselholt'>Lars Hesselholt</a>, <a class='existingWikiWord' href='/nlab/show/Ib+Madsen'>Ib Madsen</a>, <em>Real algebraic K-theory</em> (<a href='http://www.birs.ca/workshops/2012/12w5116/report12w5116.pdf'>announcement pdf</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Lars+Hesselholt'>Lars Hesselholt</a>, <a class='existingWikiWord' href='/nlab/show/Ib+Madsen'>Ib Madsen</a>, <em>Real algebraic K-theory</em> (<a href='http://www.math.ku.dk/~larsh/papers/s05/book.pdf'>manuscript</a>)</li>
 </ul>
 
 <p>Some details are in</p>
@@ -330,14 +330,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on April 16, 2014 06:53:22 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (145.116.129.4)
+  Revised on October 24, 2017 12:17:08 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (217.39.117.243)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/real+algebraic+K-theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/real+algebraic+K-theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/real+algebraic+K-theory/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/real+algebraic+K-theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/real+algebraic+K-theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
